# Diplomer

./: .~lock.Отчёт-пробник.odt#  Отчёт-пробник.odt  запросы.txt  план 2.txt  план 3.txt  план.txt
app/: CMakeLists.txt  LoginPage.qml  Main.qml  OrderPage.qml  ReportsPage.qml  StockPage.qml  dbworker.cpp  dbworker.h  exceptions.h  logs.h  settings.cpp  settings.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
app/include/: logs.h
app/resources/qml/: OrderPage.qml
app/src/: exceptions.cpp  logs.cpp  main.cpp  tcpclient.cpp
app/tests/unit/: main.cpp  test_logs.cpp  test_settings.cpp  test_settings.h
всякое/: ER.vsdx  ТЗ.txt  (+10 more)
на всякий случай/app/: CMakeLists.txt
на всякий случай/app/deploy/: Makefile  logs.txt
на всякий случай/app/deploy/.cmake/api/v1/reply/: cmakeFiles-v1-9ce0f0704d4918293270.json  index-2026-06-04T15-36-36-0074.json  target-all_qmllint-Release-2bb05b602e341544900d.json  target-all_qmllint_json-Release-235f013a52f2fffbb58c.json  target-appapp_autogen-Release-383529e3fad425b3ae44.json  target-appapp_copy_res-Release-8b8b5e7beb739acc5853.json  target-tst_test-Release-535fc42b7df6bad447ea.json
на всякий случай/app/deploy/.cmake/api/v1/reply.prev/: cmakeFiles-v1-c35ec2baa075da2a476d.json  codemodel-v2-c4296cac7cc559eb7be7.json  directory-.-Release-d7ec44fd20d43b2a4b54.json  index-2026-05-20T17-18-15-0864.json  target-all_aotstats-Release-3d22069c36d8c49b5d51.json  target-appapp_autogen_timestamp_deps-Release-ef6e8a34909fe8ddc468.json  target-module_appapp_aotstats_target-Release-387de9c29452909525e3.json  target-tst_test_autogen-Release-7173a60f625372fc7b4b.json
на всякий случай/app/deploy/.qt/: appapp_qml.cmake  appapp_res.cmake
на всякий случай/app/deploy/.qt/deploy_qml_imports/: appapp.cmake
на всякий случай/app/deploy/.qt/rcc/: qrc_appapp_raw_qml_0.cpp  qrc_qmake_app.cpp
на всякий случай/app/deploy/.qtc_clangd/.cache/clangd/index/: QAbstractSocket.09C64A3C66449F80.idx  logs.cpp.127729ABDB6CC0B3.idx  logs.h.EBA65D5CDF85C583.idx  q20functional.h.DB695B36E77EE6E8.idx  qabstractitemmodel.h.E4A055A1CCB71514.idx  qatomicscopedvaluerollback.h.75EA3313647BDFDB.idx  qcborarray.h.99A78451ABDE9567.idx  qendian.h.DC1BD50AE00DEFAD.idx  qfuture_impl.h.DBB474038C8EAE04.idx  qfutureinterface.h.D8076323440E33C4.idx  qline.h.5F3D341A3087B39F.idx  (+22 more)
на всякий случай/app/deploy/.rcc/qmlcache/: appapp_qml_loader_file_list.rsp  module_appapp.aotstatslist
на всякий случай/app/deploy/.rcc/qmllint/: appapp.rsp  appapp_json.rsp  appapp_module.rsp
на всякий случай/app/deploy/app/: qmldir
на всякий случай/app/deploy/app/resources/qml/: LoginPage.qml  ReportsPage.qml
на всякий случай/app/deploy/appapp_autogen/: deps
на всякий случай/app/deploy/appapp_autogen/6YEA5652QU/: moc_dbworker.cpp  moc_dbworker.cpp.d  moc_logs.cpp.d  moc_settings.cpp.d  moc_settings.cpp.json  moc_tcpclient.cpp  moc_tcpclient.cpp.json
на всякий случай/app/deploy/meta_types/: appapp_json_file_list.txt  appapp_json_file_list.txt.timestamp
на всякий случай/app/deploy/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
на всякий случай/app/deploy/tests/tst_test_autogen/: deps
на всякий случай/app/deploy/tests/tst_test_autogen/DGKZTCOIDE/: moc_settings.cpp.d  moc_tcpclient.cpp  moc_tcpclient.cpp.d
на всякий случай/app/deploy/tests/tst_test_autogen/REIAQNFDEZ/: moc_test_logs.cpp  moc_test_logs.cpp.d
на всякий случай/app/docs/: Doxyfile  README.md
на всякий случай/app/docs/html/: annotated.html  class_client_connection-members.html  class_client_connection.html  class_client_connection.js  class_d_b_worker-members.html  class_d_b_worker.html  class_d_b_worker.js  class_database_ex-members.html  class_database_ex.html  class_exceptions-members.html  class_exceptions.html  class_file_ex-members.html  class_file_ex.html  class_logs-members.html  class_logs.html  class_network_ex-members.html  class_network_ex.html  class_settings-members.html  class_settings.html  class_settings.js  class_tcp_client-members.html  class_tcp_client.html  class_tcp_client.js  class_tcp_server-members.html  class_tcp_server.html  class_tcp_server.js  class_validate_ex-members.html  class_validate_ex.html  classes.html  dbworker_8cpp_source.html  dbworker_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  exceptions_8cpp_source.html  exceptions_8h_source.html  files.html  functions.html  functions_func.html  (+16 more)
на всякий случай/app/docs/html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1d.js  all_1e.js  all_1f.js  all_23.js  all_4.js  all_5.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  pages_11.js  pages_12.js  pages_13.js  pages_14.js  pages_15.js  (+3 more)
на всякий случай/app/docs/latex/: annotated.tex  class_client_connection.tex  class_d_b_worker.tex  class_database_ex.tex  class_exceptions.tex  class_file_ex.tex  class_logs.tex  class_network_ex.tex  class_settings.tex  class_tcp_client.tex  class_tcp_server.tex  class_validate_ex.tex  dbworker_8cpp_source.tex  dbworker_8h_source.tex  exceptions_8cpp_source.tex  exceptions_8h_source.tex  files.tex  hierarchy.tex  logs_8cpp_source.tex  logs_8h_source.tex  main_8cpp_source.tex  md__r_e_a_d_m_e.tex  refman.aux  refman.idx  refman.out  refman.tex  refman.toc  settings_8cpp_source.tex  settings_8h_source.tex  tcpclient_8cpp_source.tex  tcpclient_8h_source.tex  tcpserver_8cpp_source.tex  tcpserver_8h_source.tex
на всякий случай/app/include/: dbworker.h  exceptions.h  settings.h  tcpclient.h  tcpserver.h
на всякий случай/app/resources/qml/: ActiveOrdersPage.qml
на всякий случай/app/src/: dbworker.cpp  settings.cpp  tcpclient.cpp  tcpserver.cpp
на всякий случай/app/tests/: CMakeLists.txt
на всякий случай/app/tests/unit/: test_tcpclient.cpp
(+246 files in other folders)
